Criação de enums para setar a configuração do driver manager

--- a/config/configuration.properties
+++ b/config/configuration.properties
@@ -1,3 +1,6 @@
+environment=local
+browser=chrome
+windowMaximize=true
 driverPath=C:\\Ruby26-x64\\bin\\chromedriver.exe
 implicitlyWait=10
 url=https://www.advantageonlineshopping.com/#/
