Substituição de DriverFactory por DriverManager seguindo patterns Singletton

--- a/config/configuration.properties
+++ b/config/configuration.properties
@@ -4,3 +4,4 @@ windowMaximize=true
 driverPath=C:\\Ruby26-x64\\bin\\chromedriver.exe
 implicitlyWait=10
 url=https://www.advantageonlineshopping.com/#/
+windowMaximize=true
