Refatoração no gerador de Relatórios

--- a/config/configuration.properties
+++ b/config/configuration.properties
@@ -5,4 +5,4 @@ driverPath=C:\\Ruby26-x64\\bin\\chromedriver.exe
 implicitlyWait=10
 url=https://www.advantageonlineshopping.com/#/
 windowMaximize=true
-reportConfigPath=config\\extensionConfig.xml
+reportConfigPath=config/extensionConfig.xml
